fix: can not set post to private

--- a/Blog.Admin/Areas/Account/Views/Settings/Index.cshtml
+++ b/Blog.Admin/Areas/Account/Views/Settings/Index.cshtml
@@ -85,12 +85,9 @@
                             </dd>
                         </div>
                         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-b sm:border-gray-200 sm:py-5">
-                            <dt class="text-sm font-medium text-gray-500">Job title</dt>
+                            <dt class="text-sm font-medium text-gray-500">Role</dt>
                             <dd class="mt-1 flex text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-                                <span class="flex-grow">Human Resources Manager</span>
-                                <span class="ml-4 flex-shrink-0">
-                                    <button type="button" class="rounded-md bg-white font-medium text-purple-600 hover:text-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2">Update</button>
-                                </span>
+                                <span class="flex-grow">Admin</span>
                             </dd>
                         </div>
                     </dl>
@@ -113,37 +110,7 @@
                                 </span>
                             </dd>
                         </div>
-                        <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:pt-5">
-                            <dt class="text-sm font-medium text-gray-500">Date format</dt>
-                            <dd class="mt-1 flex text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-                                <span class="flex-grow">DD-MM-YYYY</span>
-                                <span class="ml-4 flex flex-shrink-0 items-start space-x-4">
-                                    <button type="button" class="rounded-md bg-white font-medium text-purple-600 hover:text-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2">Update</button>
-                                    <span class="text-gray-300" aria-hidden="true">|</span>
-                                    <button type="button" class="rounded-md bg-white font-medium text-purple-600 hover:text-purple-500 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2">Remove</button>
-                                </span>
-                            </dd>
-                        </div>
-                        <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:pt-5">
-                            <dt class="text-sm font-medium text-gray-500" id="timezone-option-label">Automatic timezone</dt>
-                            <dd class="mt-1 flex text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-                                <!-- Enabled: "bg-purple-600", Not Enabled: "bg-gray-200" -->
-                                <button type="button" class="bg-gray-200 relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 sm:ml-auto" role="switch" aria-checked="true" aria-labelledby="timezone-option-label">
-                                    <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                                    <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"></span>
-                                </button>
-                            </dd>
-                        </div>
-                        <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-b sm:border-gray-200 sm:py-5">
-                            <dt class="text-sm font-medium text-gray-500" id="auto-update-option-label">Auto-update applicant data</dt>
-                            <dd class="mt-1 flex text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-                                <!-- Enabled: "bg-purple-600", Not Enabled: "bg-gray-200" -->
-                                <button type="button" class="bg-gray-200 relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 sm:ml-auto" role="switch" aria-checked="false" aria-labelledby="auto-update-option-label">
-                                    <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                                    <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"></span>
-                                </button>
-                            </dd>
-                        </div>
+
                     </dl>
                 </div>
             </div>
