--- a/Blog.Admin/Views/Post/Create.cshtml
+++ b/Blog.Admin/Views/Post/Create.cshtml
@@ -93,7 +93,7 @@
 </div>
 @* 封面结束 *@
 
-@* Topic *@
+@* 话题 *@
 <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
     <label asp-for="PostCreateFormData.Topic" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
     <div class="mt-1 sm:col-span-2 sm:mt-0">
@@ -102,7 +102,7 @@
     </div>
 </div>
 
-@* category *@
+@* 类别 *@
 <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
     <label asp-for="PostCreateFormData.Category" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
     <div class="mt-1 sm:col-span-2 sm:mt-0">
@@ -117,6 +117,14 @@
     <div class="mt-1 sm:col-span-2 sm:mt-0">
         <select asp-for="PostCreateFormData.Language" asp-items="Model.SupportLanguages" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
         </select>
+    </div>
+</div>
+
+@* 可见 *@
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label asp-for="PostCreateFormData.IsPublic" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <input type="checkbox" asp-for="PostCreateFormData.IsPublic"/>
     </div>
 </div>
 
