--- a/Blog.Admin/Areas/Account/Views/Settings/Index.cshtml
+++ b/Blog.Admin/Areas/Account/Views/Settings/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
     <div class="px-4 sm:px-6 md:px-0">
         <div class="py-6">
-            <!-- Tabs -->
+            @* Tabs *@
             <div class="lg:hidden">
                 <label for="selected-tab" class="sr-only">Select a tab</label>
                 <select id="selected-tab" name="selected-tab" class="mt-1 block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-purple-500 focus:outline-none focus:ring-purple-500 sm:text-sm">
@@ -44,7 +44,6 @@
                     </nav>
                 </div>
             </div>
-
             <!-- Description list with inline editing -->
             <div class="mt-10 divide-y divide-gray-200">
                 <div class="space-y-1">
@@ -93,7 +92,6 @@
                     </dl>
                 </div>
             </div>
-
             <div class="mt-10 divide-y divide-gray-200">
                 <div class="space-y-1">
                     <h3 class="text-lg font-medium leading-6 text-gray-900">Account</h3>
@@ -110,7 +108,6 @@
                                 </span>
                             </dd>
                         </div>
-
                     </dl>
                 </div>
             </div>
