feat: use google fonts

--- a/Blog.Admin/Views/Shared/_Layout2.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout2.cshtml
@@ -13,6 +13,10 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/tailwindcss.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    @* Google Fonts *@
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 @* When the mobile menu is open, add `overflow-hidden` to the `body` element to prevent double scrollbars *@
 <body class="h-full" x-data="{mobileMenuOpen: false}" x-bind:class="mobileMenuOpen ? 'overflow-hidden' : ''">
