--- a/Blog.Admin/Views/Post/_PostUpdateScript.cshtml
+++ b/Blog.Admin/Views/Post/_PostUpdateScript.cshtml
@@ -1,5 +1,3 @@
-@using Newtonsoft.Json
-@using System.Text.Json
 @model PostUpdateScriptDto
 
 <script>
@@ -23,14 +21,30 @@ const newImageContent = () => {
     };
 }
 
+const newCodeContent = () => {
+  return {
+        uuid: uuidv4(),
+        content: '',
+        fileName: '',
+        language: '',
+    };
+}
+
 const setBlockType = (block, type) => {
     switch (type) {
     case 'images':
         block.paragraph = null;
+        block.code = null;
         block.images = [newImageContent()];
         break;
     case 'paragraph':
         block.paragraph = ''
+        block.code = null;
+        block.images = null;
+        break;
+    case 'code':
+        block.paragraph = null;
+        block.code = newCodeContent();
         block.images = null;
         break;
     }
@@ -50,7 +64,7 @@ const newPostContentData = () => {
         ],
     };
 }
-
+@* 把请求API获取的JSON数据转换成内部使用的Object *@
 const convertToLocalPostContentData = (loadedData) => {
    var data = newPostContentData();
    if (loadedData.cover) {
@@ -66,6 +80,12 @@ const convertToLocalPostContentData = (loadedData) => {
        if(b.paragraph != null) {
          setBlockType(block,  'paragraph');
          block.paragraph = b.paragraph;
+       }　else if (b.code != null) {
+         setBlockType(block, 'code');
+         block.code = newCodeContent();
+         block.code.content = b.code.content;
+         block.code.language = b.code.language;
+         block.code.fileName = b.code.fileName;
        } else if (b.images != null) {
          setBlockType(block, 'images');
          @* 装配图像块 *@
@@ -201,6 +221,10 @@ document.addEventListener('alpine:init', () => {
       const b = this.postContentData.blocks[idx]
       setBlockType(b, 'paragraph');
     },
+    turnIntoCodeSnippetBlock(idx) {
+      const b = this.postContentData.blocks[idx]
+      setBlockType(b, 'code');
+    },
     dragStartHandler(event, index) {
       event.dataTransfer.setData('text/plain', index);
     },
@@ -237,6 +261,15 @@ document.addEventListener('alpine:init', () => {
             if (b.paragraph.length === 0) continue;
             postContent.blocks.push({paragraph: b.paragraph});
             continue;
+          }
+          if (b.code != null) {
+            postContent.blocks.push({
+              code: {
+                language: b.code.language,
+                content: b.code.content,
+                fileName: b.code.fileName
+              }
+            })
           }
           if (b.images != null) {
             if (b.images.length === 0) continue;
